unpackaged/main/default/objects/Savings__mdt/Savings__mdt.object-meta.xml
<CustomObject>
    <description>Helps to calculate the savings numbers</description>
    <label>Savings</label>
    <pluralLabel>Savings</pluralLabel>
</CustomObject>