unpackaged/main/default/objects/Savings__mdt/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <label>AP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>