unpackaged/main/default/objects/Savings__mdt/fields/Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Base_Year__c</fullName>
    <label>Base Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>