unpackaged/main/default/objects/Savings__mdt/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <label>High School</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>