unpackaged/main/default/objects/Savings__mdt/fields/Saving_Amount__c.field-meta.xml
<CustomField>
    <fullName>Saving_Amount__c</fullName>
    <description>Saving_Amount</description>
    <label>General</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>